--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400);
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400);
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
 @charset "UTF-8"; /*!
  * Bootstrap  v5.2.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
@@ -21120,133 +21124,202 @@ readers do not read off random characters that represent icons */
   color: black;
 }
 
+/* Fonts */
+/* fontawesome */
+[class*=fontawesome-]:before {
+  font-family: "FontAwesome", sans-serif;
+}
+
+/* Simple Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* body */
 body {
-  overflow: visible;
+  background: white;
+  color: #5e5e5e;
+  font: 400 87.5%/1.5em "Open Sans", sans-serif;
 }
 
-.notice,
-.alert {
-  display: none;
+/* Form Layout */
+.form-wrapper {
+  background: #e9e9e9;
+  margin: 3em auto;
+  padding: 0 1em;
+  max-width: 370px;
 }
 
-.signupPage .header {
-  padding: 20px;
+h1, .h1 {
   text-align: center;
-  background: #fd5068;
-  color: #fff;
+  padding: 1em 0;
 }
-.signupPage .userProfileImg {
-  position: relative;
-  margin: 0 auto 10px auto;
-  width: 100px;
-  height: 100px;
-  background: #f85a6f;
-  display: flex;
-  cursor: pointer;
-  align-items: center;
-  justify-content: center;
+
+form {
+  padding: 0 1.5em;
 }
-.signupPage .userProfileImg:hover .userProfileImg_description {
-  opacity: 1;
-}
-.signupPage .userProfileImg_description {
-  transition: opacity 0.5s;
-  opacity: 0;
+
+.form-item {
+  margin-bottom: 0.75em;
   width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  position: absolute;
-  font-size: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(5, 5, 5, 0.5);
-  color: #fff;
-}
-.signupPage .userProfileImg .fa-camera {
-  color: #fff;
-}
-.signupPage .userProfileImg > input {
-  display: none;
-}
-.signupPage .userImgPreview {
-  margin: 0 auto;
-  display: none;
-  text-align: center;
-}
-.signupPage .userImgPreview.is-active {
-  display: block;
-}
-.signupPage .userImgPreview_content {
-  max-width: 100px;
-  margin: 10px;
-  padding: 10px;
-  border: solid thin lightgray;
-  border-radius: 5px;
-}
-.signupPage .userImgPreview_text {
-  font-size: 11px;
-}
-.signupPage .submitBtn {
-  background: #fd5068;
-  color: #fff;
-  width: 200px;
-  padding: 10px;
-  border-radius: 90px;
-  transition: opacity 0.5s;
-}
-.signupPage .submitBtn:hover {
-  opacity: 0.6;
-}
-.signupPage .errorMessage {
-  color: #fd5068;
 }
 
-.linkToLogin {
-  margin: 15px 0 15px;
-  text-align: center;
-}
-.linkToLogin > a {
-  color: #fd5068;
-}
-
-.signinPage {
-  margin-top: 10vh;
-}
-.signinPage .title {
-  color: #fd5068;
-  margin: 20px 0;
-  text-align: center;
-}
-.signinPage .userIcon {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  margin: 0 auto;
-  background: #fd5068;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.signinPage .loginBtn {
-  padding: 12px;
-  width: 200px;
-  border-radius: 21px;
-  background: #fd5068;
-  color: #fff;
-  text-align: center;
+.form-item input {
+  background: #fafafa;
   border: none;
-  margin-top: 20px;
-  opacity: 1;
-  transition: opacity 0.5s;
+  border-bottom: 2px solid #e9e9e9;
+  color: #666;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1em;
+  height: 50px;
+  transition: border-color 0.3s;
+  width: 100%;
+}
+
+.form-item input:focus {
+  border-bottom: 2px solid #c0c0c0;
+  outline: none;
+}
+
+.button-panel {
+  margin: 2em 0 0;
+  width: 100%;
+}
+
+.button-panel .button {
+  background: #00F9A9;
+  border: none;
+  color: #fff;
   cursor: pointer;
+  height: 50px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.2em;
+  letter-spacing: 0.05em;
+  text-align: center;
+  text-transform: uppercase;
+  transition: background 0.3s ease-in-out;
+  width: 100%;
 }
-.signinPage .loginBtn:hover {
-  opacity: 0.7;
+
+.button:hover {
+  background: #ee3e52;
 }
-.signinPage .errorMessage {
-  color: #fd5068;
+
+.form-footer {
+  font-size: 1em;
+  padding: 2em 0;
+  text-align: center;
+}
+
+.form-footer a {
+  color: #8c8c8c;
+  text-decoration: none;
+  transition: border-color 0.3s;
+}
+
+.form-footer a:hover {
+  border-bottom: 1px dotted #8c8c8c;
+}
+
+/* Fonts */
+/* fontawesome */
+[class*=fontawesome-]:before {
+  font-family: "FontAwesome", sans-serif;
+}
+
+/* Simple Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* body */
+body {
+  background: white;
+  color: #5e5e5e;
+  font: 400 87.5%/1.5em "Open Sans", sans-serif;
+}
+
+/* Form Layout */
+.form-wrapper {
+  background: #e9e9e9;
+  margin: 3em auto;
+  padding: 0 1em;
+  max-width: 370px;
+}
+
+h1, .h1 {
+  text-align: center;
+  padding: 1em 0;
+}
+
+form {
+  padding: 0 1.5em;
+}
+
+.form-item {
+  margin-bottom: 0.75em;
+  width: 100%;
+}
+
+.form-item input {
+  background: #fafafa;
+  border: none;
+  border-bottom: 2px solid #e9e9e9;
+  color: #666;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1em;
+  height: 50px;
+  transition: border-color 0.3s;
+  width: 100%;
+}
+
+.form-item input:focus {
+  border-bottom: 2px solid #c0c0c0;
+  outline: none;
+}
+
+.button-panel {
+  margin: 2em 0 0;
+  width: 100%;
+}
+
+.button-panel .button {
+  background: #00F9A9;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  height: 50px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.2em;
+  letter-spacing: 0.05em;
+  text-align: center;
+  text-transform: uppercase;
+  transition: background 0.3s ease-in-out;
+  width: 100%;
+}
+
+.button:hover {
+  background: #ee3e52;
+}
+
+.form-footer {
+  font-size: 1em;
+  padding: 2em 0;
+  text-align: center;
+}
+
+.form-footer a {
+  color: #8c8c8c;
+  text-decoration: none;
+  transition: border-color 0.3s;
+}
+
+.form-footer a:hover {
+  border-bottom: 1px dotted #8c8c8c;
 }
 
 .usershowPage .header {
