--- a/resources/sass/_sign_in.scss
+++ b/resources/sass/_sign_in.scss
@@ -1,38 +1,137 @@
-.signinPage {
-    margin-top: 10vh;
-    .title {
-        color:#fd5068;
-        margin: 20px 0;
-        text-align: center;
-    }
-    .userIcon {
-        width: 120px;
-        height: 120px;
-        border-radius: 50%;
-        margin: 0 auto;
-        background: #fd5068;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .loginBtn {
-        padding: 12px;
-        width: 200px;
-        border-radius: 21px;
-        background: #fd5068;
-        color: #fff;
-        text-align: center;
-        border: none;
-        margin-top: 20px;
-        opacity: 1;
-        transition: opacity .5s;
-        cursor: pointer;
-        &:hover {
-            opacity: .7;
-        }
-    }
-    .errorMessage{
-        color:#fd5068;
-    }
+//.signinPage {
+//    margin-top: 10vh;
+//    .title {
+//        color:#fd5068;
+//        margin: 20px 0;
+//        text-align: center;
+//    }
+//    .userIcon {
+//        width: 120px;
+//        height: 120px;
+//        border-radius: 50%;
+//        margin: 0 auto;
+//        background: #fd5068;
+//        color: #fff;
+//        display: flex;
+//        align-items: center;
+//        justify-content: center;
+//    }
+//    .loginBtn {
+//        padding: 12px;
+//        width: 200px;
+//        border-radius: 21px;
+//        background: #fd5068;
+//        color: #fff;
+//        text-align: center;
+//        border: none;
+//        margin-top: 20px;
+//        opacity: 1;
+//        transition: opacity .5s;
+//        cursor: pointer;
+//        &:hover {
+//            opacity: .7;
+//        }
+//    }
+//    .errorMessage{
+//        color:#fd5068;
+//    }
+//}
+
+
+/* Fonts */
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400);
+
+/* fontawesome */
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+[class*="fontawesome-"]:before {
+    font-family: 'FontAwesome', sans-serif;
+}
+
+/* Simple Reset */
+* { margin: 0; padding: 0; box-sizing: border-box; }
+
+/* body */
+body {
+    background: white;
+    color: #5e5e5e;
+    font: 400 87.5%/1.5em 'Open Sans', sans-serif;
+}
+
+/* Form Layout */
+.form-wrapper {
+    background: #e9e9e9;
+    margin: 3em auto;
+    padding: 0 1em;
+    max-width: 370px;
+}
+
+h1 {
+    text-align: center;
+    padding: 1em 0;
+}
+
+form {
+    padding: 0 1.5em;
+}
+
+.form-item {
+    margin-bottom: 0.75em;
+    width: 100%;
+}
+
+.form-item input {
+    background: #fafafa;
+    border: none;
+    border-bottom: 2px solid #e9e9e9;
+    color: #666;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    height: 50px;
+    transition: border-color 0.3s;
+    width: 100%;
+}
+
+.form-item input:focus {
+    border-bottom: 2px solid #c0c0c0;
+    outline: none;
+}
+
+.button-panel {
+    margin: 2em 0 0;
+    width: 100%;
+}
+
+.button-panel .button {
+    background: #00F9A9;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    height: 50px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2em;
+    letter-spacing: 0.05em;
+    text-align: center;
+    text-transform: uppercase;
+    transition: background 0.3s ease-in-out;
+    width: 100%;
+}
+
+.button:hover {
+    background: #ee3e52;
+}
+
+.form-footer {
+    font-size: 1em;
+    padding: 2em 0;
+    text-align: center;
+}
+
+.form-footer a {
+    color: #8c8c8c;
+    text-decoration: none;
+    transition: border-color 0.3s;
+}
+
+.form-footer a:hover {
+    border-bottom: 1px dotted #8c8c8c;
 }
