--- a/resources/sass/_sign_up.scss
+++ b/resources/sass/_sign_up.scss
@@ -1,94 +1,193 @@
-$main-color: #fd5068;
-$main-text-color: #fff;
+//$main-color: #fd5068;
+//$main-text-color: #fff;
+//
+//body {
+//    overflow: visible;
+//}
+//
+//.notice,
+//.alert {
+//    display: none;
+//}
+//
+//.signupPage {
+//    .header {
+//        padding: 20px;
+//        text-align: center;
+//        background: $main-color;
+//        color: $main-text-color;
+//    }
+//    .userProfileImg {
+//        position: relative;
+//        margin: 0 auto 10px auto;
+//        width: 100px;
+//        height: 100px;
+//        background: #f85a6f;
+//        display: flex;
+//        cursor: pointer;
+//        align-items: center;
+//        justify-content: center;
+//        &:hover .userProfileImg_description {
+//            opacity: 1;
+//        }
+//        &_description {
+//            transition: opacity .5s;
+//            opacity: 0;
+//            width: 100%;
+//            height: 100%;
+//            border-radius: 50%;
+//            position: absolute;
+//            font-size: 10px;
+//            display: flex;
+//            align-items: center;
+//            justify-content: center;
+//            background: rgba(5, 5, 5, .5);
+//            color: #fff;
+//        }
+//        .fa-camera {
+//            color: #fff;
+//        }
+//        &>input {
+//            display: none;
+//        }
+//    }
+//    .userImgPreview {
+//        margin: 0 auto;
+//        display: none;
+//        text-align: center;
+//        &.is-active {
+//            display: block;
+//        }
+//        &_content {
+//            max-width: 100px;
+//            margin: 10px;
+//            padding: 10px;
+//            border: solid thin lightgray;
+//            border-radius: 5px;
+//        }
+//        &_text {
+//            font-size: 11px;
+//        }
+//    }
+//    .submitBtn {
+//        background: $main-color;
+//        color: $main-text-color;
+//        width: 200px;
+//        padding: 10px;
+//        border-radius: 90px;
+//        transition: opacity .5s;
+//        &:hover {
+//            opacity: .6;
+//        }
+//    }
+//    .errorMessage{
+//        color:#fd5068;
+//    }
+//}
+//
+//.linkToLogin {
+//    margin: 15px 0 15px;
+//    text-align: center;
+//    & > a {
+//        color:#fd5068;
+//    }
+//}
 
+
+/* Fonts */
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400);
+
+/* fontawesome */
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+[class*="fontawesome-"]:before {
+    font-family: 'FontAwesome', sans-serif;
+}
+
+/* Simple Reset */
+* { margin: 0; padding: 0; box-sizing: border-box; }
+
+/* body */
 body {
-    overflow: visible;
+    background: white;
+    color: #5e5e5e;
+    font: 400 87.5%/1.5em 'Open Sans', sans-serif;
 }
 
-.notice,
-.alert {
-    display: none;
+/* Form Layout */
+.form-wrapper {
+    background: #e9e9e9;
+    margin: 3em auto;
+    padding: 0 1em;
+    max-width: 370px;
 }
 
-.signupPage {
-    .header {
-        padding: 20px;
-        text-align: center;
-        background: $main-color;
-        color: $main-text-color;
-    }
-    .userProfileImg {
-        position: relative;
-        margin: 0 auto 10px auto;
-        width: 100px;
-        height: 100px;
-        background: #f85a6f;
-        display: flex;
-        cursor: pointer;
-        align-items: center;
-        justify-content: center;
-        &:hover .userProfileImg_description {
-            opacity: 1;
-        }
-        &_description {
-            transition: opacity .5s;
-            opacity: 0;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            position: absolute;
-            font-size: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: rgba(5, 5, 5, .5);
-            color: #fff;
-        }
-        .fa-camera {
-            color: #fff;
-        }
-        &>input {
-            display: none;
-        }
-    }
-    .userImgPreview {
-        margin: 0 auto;
-        display: none;
-        text-align: center;
-        &.is-active {
-            display: block;
-        }
-        &_content {
-            max-width: 100px;
-            margin: 10px;
-            padding: 10px;
-            border: solid thin lightgray;
-            border-radius: 5px;
-        }
-        &_text {
-            font-size: 11px;
-        }
-    }
-    .submitBtn {
-        background: $main-color;
-        color: $main-text-color;
-        width: 200px;
-        padding: 10px;
-        border-radius: 90px;
-        transition: opacity .5s;
-        &:hover {
-            opacity: .6;
-        }
-    }
-    .errorMessage{
-        color:#fd5068;
-    }
-}
-
-.linkToLogin {
-    margin: 15px 0 15px;
+h1 {
     text-align: center;
-    & > a {
-        color:#fd5068;
-    }
+    padding: 1em 0;
+}
+
+form {
+    padding: 0 1.5em;
+}
+
+.form-item {
+    margin-bottom: 0.75em;
+    width: 100%;
+}
+
+.form-item input {
+    background: #fafafa;
+    border: none;
+    border-bottom: 2px solid #e9e9e9;
+    color: #666;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    height: 50px;
+    transition: border-color 0.3s;
+    width: 100%;
+}
+
+.form-item input:focus {
+    border-bottom: 2px solid #c0c0c0;
+    outline: none;
+}
+
+.button-panel {
+    margin: 2em 0 0;
+    width: 100%;
+}
+
+.button-panel .button {
+    background: #00F9A9;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    height: 50px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2em;
+    letter-spacing: 0.05em;
+    text-align: center;
+    text-transform: uppercase;
+    transition: background 0.3s ease-in-out;
+    width: 100%;
+}
+
+.button:hover {
+    background: #ee3e52;
+}
+
+.form-footer {
+    font-size: 1em;
+    padding: 2em 0;
+    text-align: center;
+}
+
+.form-footer a {
+    color: #8c8c8c;
+    text-decoration: none;
+    transition: border-color 0.3s;
+}
+
+.form-footer a:hover {
+    border-bottom: 1px dotted #8c8c8c;
 }
